Add base for arch tutorial

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -403,8 +403,8 @@
             <section data-state="blackout">
                 <h3>Special:Attribution</h3>
                 <ul>
-                    <li>Slides: CC BY-SA 3.0, Jeroen De Dauw</li>
-                    <li>Slide engine: reveal.js, Copyright (C) 2013 Hakim El Hattab</li>
+                    <li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
+                    <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</li>
                 </ul>
             </section>
 
