--- a/smwcon/2013fall/arch/index.html
+++ b/smwcon/2013fall/arch/index.html
@@ -40,7 +40,7 @@
                 <h2>Building on top of SMW</h2>
                 <p>
                     Tutorial by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                    <br /><br />
+                    bit.ly/smw-tutorial<br /><br />
                     <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Building_on_top_of_SMW">SMWCon Fall 2013, Berlin</a>
                 </p>
             </section>
@@ -67,7 +67,7 @@
             <section data-state="blackout" data-transition="linear">
                 <h3>Special:Links</h3>
                 <ul>
-                    <li><a href="">View slides </a></li>
+                    <li><a href="http://bit.ly/smw-tutorial">View slides bit.ly/smw-tutorial</a></li>
                     <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
                     <li><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></li>
                     <li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></li>
