Add stuff to arch slides

--- a/smwcon/2013fall/arch/index.html
+++ b/smwcon/2013fall/arch/index.html
@@ -60,6 +60,60 @@
             <section>
                 <h3>Overview</h3>
                 <ul>
+                    <li>The data model</li>
+                    <li>Data access layer</li>
+                    <li>Core workflows</li>
+                    <li>Presentation layer</li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>The data model</h3>
+                <ul>
+                    <li>SMW\DataItem</li>
+                    <li>SMW\DataValue</li>
+                    <li>SMW\SemanticData</li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>DataItem</h3>
+                <ul>
+                    <li></li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>DataValue</h3>
+                <ul>
+                    <li></li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>SemanticData</h3>
+                <ul>
+                    <li></li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Data access layer</h3>
+                <ul>
+                    <li></li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Core workflows</h3>
+                <ul>
+                    <li></li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Presentation layer</h3>
+                <ul>
                     <li></li>
                 </ul>
             </section>
