work on arch slides

--- a/smwcon/2013fall/arch/index.html
+++ b/smwcon/2013fall/arch/index.html
@@ -160,7 +160,7 @@
             </section>
 
             <section data-background="#005555" data-transition="linear" data-background-transition="slide">
-                <h3>Core workflows</h3>
+                <h3>Core workflow: page save</h3>
                 <ul>
                     <li>Page saved</li>
                     <li>Data collected into SMWSemanticData</li>
@@ -168,12 +168,19 @@
                 </ul>
             </section>
 
-            <section>
-                <h3>Presentation layer</h3>
+            <section data-background="#005555" data-transition="linear" data-background-transition="slide">
+                <h3>Core workflow: inline queries</h3>
                 <ul>
-                    <li></li>
+                    <li>Page rebuild</li>
+                    <li>Ask parser function invoked</li>
+                    <li>Ask query wikitext parsed</li>
+                    <li>Query passed to store</li>
+                    <li>Query result passed to result printer</li>
+                    <li>Result printer output added to page</li>
                 </ul>
             </section>
+
+
 
             <section data-state="blackout" data-transition="linear">
                 <h3>Special:Links</h3>
