--- a/smwcon/2013fall/arch/index.html
+++ b/smwcon/2013fall/arch/index.html
@@ -36,19 +36,26 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-            <section data-transition="default">
-                <h2>An introduction to SMWs architecture</h2>
-                <p>
-                    Tutorial by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                    bit.ly/smw-arch<br /><br />
-                    <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Building_on_top_of_SMW">SMWCon Fall 2013, Berlin</a>
-                </p>
+            <section>
+                <section data-transition="default">
+                    <h2>An introduction to SMWs architecture</h2>
+                    <p>
+                        Tutorial by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
+                        bit.ly/smw-arch<br /><br />
+                        <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Building_on_top_of_SMW">SMWCon Fall 2013, Berlin</a>
+                    </p>
+                </section>
+
+                <section data-transition="default">
+                    <img src="img/refactoring.gif" />
+                </section>
             </section>
 
             <section data-transition="default">
                 <h3>About me</h3>
                 <ul>
-                    <li>(S)MW dev since 2009</li>
+                    <li>Jeroen De Dauw</li>
+                    <li class="fragment">(S)MW dev since 2009</li>
                     <li class="fragment">Working for WMDE on Wikidata</li>
                     <li class="fragment">Domain layer guy</li>
                     <li class="fragment">Software craftsmanship</li>
