--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -170,7 +170,7 @@ function remove() {
                     <h3>New people</h3>
                     <ul>
                         <li class="fragment">Do not recognize anything</li>
-                        <li class="fragment">Can only star wandering around aimlessly</li>
+                        <li class="fragment">Can only start wandering around aimlessly</li>
                     </ul>
                 </section>
 
