--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -40,7 +40,7 @@
                     <h2>Clean functions</h2>
                     <p>
                         Caturday will not be stopped!<br />
-                        <img src="img/cat.gif" alt="Y U NO LOAD">
+                        <img src="img/Willnotbestopped.gif" alt="Y U NO LOAD">
                     </p>
                 </section>
 
@@ -339,13 +339,13 @@ if ( set( "username", "NyanCat" ) )
                     </ul>
                 </section>
 
-
                 <section data-state="blackout" data-transition="linear">
                     <h3>Links</h3>
                     <ul>
                         <li><a href="http://bit.ly/clean-functions">View slides bit.ly/clean-functions</a></li>
                         <li><a href="https://github.com/JeroenDeDauw/slides/">Slides source on GitHub</a></li>
                     </ul>
+                    <img src="img/cat.gif" />
                 </section>
 
                 <section data-state="blackout">
